SoXt 1.3.1a (so far):
*bugfixes:

SoXt 1.3.0 (2010-03-02):
* new:
  - Added getVersionToolkitString() providing the version of the
    underlying GUI toolkit version in use

* bugfixes:
  - Various compile and robustness fixes
  - Plugged memory leaks
  - Many bug fixes

* build system:
  - Updated autotools to autoconf-2.65, automake-1.8.3, libtool-1.5.26
  - Changed default location for generated HTML documentation
  - Added pkg-config description and detection support

* other:
  - Removal of Spaceball support

SoXt 1.2.2 (2004-11-16):
* Mac OS X build fixes

SoXt 1.2.1 (2004-09-24):
* Did a doxygen razzia, fixed a doc build problem

SoXt 1.2.0 (2004-09-21):
* New classes SoQtColorEditor, SoQtMaterialEditor
* support Coin's SORTED_LAYERS_BLEND transparency mode
* --enable-compact configure option, as with Coin
* misc bugfixes

SoXt 1.1.0 (2003-04-23):
* NEWS file started from scratch.