@@ -6,9 +6,9 @@
 # check what has been done. If there are only a few, consider taking them
 # out and releasing as 1.2.1 -- if not, release as 1.3.0. 20050701 mortene.
 m4_define([SOXT_MAJOR], [1])
-m4_define([SOXT_MINOR], [3])
-m4_define([SOXT_MICRO], [1])
-m4_define([SOXT_BETA], [a])
+m4_define([SOXT_MINOR], [4])
+m4_define([SOXT_MICRO], [0])
+m4_define([SOXT_BETA], [])
 
 m4_define([VERSION_STRING], [SOXT_MAJOR.SOXT_MINOR.SOXT_MICRO[]SOXT_BETA])
 
