@@ -1,0 +1,298 @@
+2019-11-09 14:52 +0100  Giampiero Gabbiani  <giampiero@gabbiani.org>  (f49517d4247c [tip])
+
+	* .hgsubstate:
+	Updated to last cpack.d for centOS and RHEL support
+
+2019-10-13 11:56 +0200  Giampiero Gabbiani  <giampiero@gabbiani.org>  (959d7cef8d9e)
+
+	* .hgsubstate:
+	Aligned with last cpack.d commit
+
+2019-09-16 07:25 +0200  Giampiero Gabbiani  <giampiero@gabbiani.org>  (eb5d8f36030b)
+
+	* .hgsubstate, CMakeLists.txt:
+	cpack.d update and report setup
+
+2019-07-14 00:12 +0200  Volker Enderlein  <volkerenderlein@hotmail.com>  (ef965f9f1b98)
+
+	* .hgsubstate:
+	Updated subrepo sogui.
+
+2019-06-22 14:47 +0200  Giampiero Gabbiani  <giampiero@gabbiani.org>  (97de0d62dda4)
+
+	* .hgsubstate:
+	Updated cpack.d
+
+2019-06-14 08:27 +0200  Giampiero Gabbiani  <giampiero@gabbiani.org>  (85e135bb266f)
+
+	* CMakeLists.txt, test-code/CMakeLists.txt:
+	Fixed missing optional X11::Xpm
+
+2019-06-12 20:37 +0000  Volker Enderlein  <volkerenderlein@hotmail.com>  (6b14d4b88216)
+
+	* CMakeLists.txt:
+	Inverted default values for options COIN_BUILD_DOCUMENTATION and
+	COIN_BUILD_MAC_FRAMEWORK for better out of the box build experience.
+
+2019-06-12 20:18 +0000  Volker Enderlein  <volkerenderlein@hotmail.com>  (dc2265255f8e)
+
+	* Merged in VolkerEnderlein/soxt/buildissue (pull request #7)
+
+	Fixed build issues of test-code on macOS.
+
+2019-06-12 20:18 +0000  Volker Enderlein  <volkerenderlein@hotmail.com>  (aeaad035eaaf <buildissue>)
+
+	* Close branch buildissue
+
+2019-06-11 11:29 -0700  Volker Enderlein  <volkerenderlein@hotmail.com>  (b8e144a7f1ef <buildissue>)
+
+	* CMakeLists.txt, src/config.h.cmake.in, test-code/CMakeLists.txt:
+	Fixed build issues of test-code on macOS.
+
+2019-03-08 22:11 +0100  Volker Enderlein  <volkerenderlein@hotmail.com>  (fd18e7bffb4b)
+
+	* soxt-config.cmake.in:
+	Added uppercase version variable.
+
+2019-03-08 17:33 +0000  Volker Enderlein  <volkerenderlein@hotmail.com>  (99dc3eb2e526)
+
+	* Info.plist.in, packaging/macosx/DMGBackground.tiff,
+	packaging/macosx/Welcome.rtf, version.plist.in: new file.
+	* Merged in VolkerEnderlein/soxt/osxframework (pull request #5)
+
+	Added framework generation and packaging on MacOS
+
+2019-03-08 17:33 +0000  Volker Enderlein  <volkerenderlein@hotmail.com>  (fdaad818e7d8 <osxframework>)
+
+	* Close branch osxframework
+
+2019-03-06 13:47 -0800  Volker Enderlein  <volkerenderlein@hotmail.com>  (daef0f77e1a9 <osxframework>)
+
+	* soxt-config.cmake.in, src/CMakeLists.txt:
+	Fixed pkgconfig installation directory.
+
+2019-02-19 22:00 +0100  Volker Enderlein  <volkerenderlein@hotmail.com>  (3bdcfe7aca0c <osxframework>)
+
+	* CMakeLists.txt, src/CMakeLists.txt:
+	Streamlining repo with other Gui toolkit repos.
+
+2019-02-18 23:33 +0100  Volker Enderlein  <volkerenderlein@hotmail.com>  (fa11f5df049b <osxframework>)
+
+	* .hgsubstate, packaging/macosx/Welcome.rtf:
+	Adapted wording of Welcome document for installer.
+
+2019-02-17 23:23 +0100  Volker Enderlein  <volkerenderlein@hotmail.com>  (2f7d3e554bda <osxframework>)
+
+	* packaging/macosx/DMGBackground.tiff: new file.
+	* packaging/macosx/noinst-dmg-files/DMGBackground.tiff: deleted file.
+	* packaging/macosx/DMGBackground.tiff, packaging/macosx/noinst-dmg-
+	files/DMGBackground.tiff:
+	Moved file for packaging on MacOs.
+
+2019-02-17 23:20 +0100  Volker Enderlein  <volkerenderlein@hotmail.com>  (e0b4f7f71172 <osxframework>)
+
+	* packaging/macosx/Welcome.rtf: new file.
+	* packaging/macosx/Coin_Welcome.rtf: deleted file.
+	* packaging/macosx/Coin_Welcome.rtf, packaging/macosx/Welcome.rtf:
+	Renamed file for packaging on MacOS.
+
+2019-02-17 23:17 +0100  Volker Enderlein  <volkerenderlein@hotmail.com>  (9ead8a34ba4d <osxframework>)
+
+	* CMakeLists.txt, src/CMakeLists.txt:
+	Restructured CMake scripts for easing installation on MacOS.
+
+2019-02-17 23:08 +0100  Volker Enderlein  <volkerenderlein@hotmail.com>  (37980cbcb133 <osxframework>)
+
+	* src/Inventor/Xt/viewers/FullViewer.cpp:
+	Fixed warning extra token after #endif.
+
+2019-02-16 16:47 +0100  Volker Enderlein  <volkerenderlein@hotmail.com>  (67afa1cdd82a <osxframework>)
+
+	* packaging/macosx/noinst-dmg-files/DMGBackground.tiff: new file.
+	* packaging/macosx/noinst-dmg-files/DMGBackground.tiff:
+	Added background image for MacOS installer.
+
+2019-02-16 16:37 +0100  Volker Enderlein  <volkerenderlein@hotmail.com>  (4b9821a86d71 <osxframework>)
+
+	* packaging/macosx/Coin_Welcome.rtf: new file.
+	* packaging/macosx/Coin_Welcome.rtf:
+	Added further packaging artifact.
+
+2019-02-16 15:52 +0100  Volker Enderlein  <volkerenderlein@hotmail.com>  (0f9473db658a <osxframework>)
+
+	* Info.plist.in, version.plist.in: new file.
+	* Info.plist.in, version.plist.in:
+	Added MacOS framework specific files.
+
+2019-02-16 15:49 +0100  Volker Enderlein  <volkerenderlein@hotmail.com>  (89cbbe8c7570 <osxframework>)
+
+	* CMakeLists.txt:
+	Fixed typo.
+
+2019-02-16 15:45 +0100  Volker Enderlein  <volkerenderlein@hotmail.com>  (5eac2a6bc237 <osxframework>)
+
+	* CMakeLists.txt, src/CMakeLists.txt, test-code/CMakeLists.txt:
+	Enable framework building for SoXt.
+
+2019-02-05 23:56 +0100  Giampiero Gabbiani  <giampiero@gabbiani.org>  (5a202a4aa233)
+
+	* .hgsubstate:
+	updated cpack.d substate
+
+2019-02-05 22:54 +0000  Giampiero Gabbiani  <giampiero@gabbiani.org>  (f0c7e1f8a87c)
+
+	* Merged in ggabbiani/soxt-fork/fix-header-install (pull request #3)
+
+	Added components to the header installation list
+
+2019-02-05 22:54 +0000  Giampiero Gabbiani  <giampiero@gabbiani.org>  (531316dc9b9a <fix-header-install>)
+
+	* Close branch fix-header-install
+
+2019-01-28 00:47 +0100  Giampiero Gabbiani  <giampiero@gabbiani.org>  (2c713c685ef8 <fix-header-install>)
+
+	* src/CMakeLists.txt:
+	Added components to the header installation list
+
+2019-02-05 22:43 +0100  Volker Enderlein  <volkerenderlein@hotmail.com>  (52d4250ffea7)
+
+	* .hgsub:
+	Set relative path to suprepository cpack.d
+
+2018-11-02 18:11 +0000  Giampiero Gabbiani  <giampiero@gabbiani.org>  (691d761a1745)
+
+	* CMakeLists.txt, SoXt.pc.cmake.in, packaging/description-summary.txt,
+	soxt-config.cmake.in, src/CMakeLists.txt, src/config.h.cmake.in,
+	test-code/CMakeLists.txt: new file.
+	* Merged in ggabbiani/soxt-fork/CMake (pull request #1)
+
+	CMake
+
+	Approved-by: Bastiaan Veelo <bastiaan@sarc.nl>
+
+2018-11-02 18:11 +0000  Giampiero Gabbiani  <giampiero@gabbiani.org>  (1222a359d50b <CMake>)
+
+	* Close branch CMake
+
+2018-11-02 18:31 +0100  Giampiero Gabbiani  <giampiero@gabbiani.org>  (d6d93ae5dda0 <CMake>)
+
+	* .hgsub, .hgsubstate:
+	sub cpack.d added
+
+2018-11-02 18:29 +0100  Giampiero Gabbiani  <giampiero@gabbiani.org>  (aa884af54b1b <CMake>)
+
+	* CMakeLists.txt, SoXt.pc.cmake.in, packaging/description-summary.txt,
+	soxt-config.cmake.in, src/CMakeLists.txt, src/config.h.cmake.in,
+	test-code/CMakeLists.txt: new file.
+	* .hgsubstate, CMakeLists.txt, SoXt.pc.cmake.in, packaging
+	/description-summary.txt, soxt-config.cmake.in, src/CMakeLists.txt,
+	src/config.h.cmake.in, test-code/CMakeLists.txt:
+	First CMake implementation and update of SoGui
+
+2018-11-02 18:18 +0100  Giampiero Gabbiani  <giampiero@gabbiani.org>  (ef6dd25b387e <CMake>)
+
+	* TODO:
+	addedd something about Linux Joy
+
+2018-11-02 18:17 +0100  Giampiero Gabbiani  <giampiero@gabbiani.org>  (3641e88925b2 <CMake>)
+
+	* test-code/initalfullscreen.cpp:
+	fixed missing includes
+
+2011-12-04 23:05 +0100  Marius Kintel  <marius@kintel.net>  (29d6920a2a3d)
+
+	* LICENSE.GPL: deleted file.
+	* COPYING, LICENSE.GPL, Makefile.am, Makefile.in, build/soxt.spec.in,
+	cfg/gendsp.pl.in:
+	fixed issue #5
+
+2011-12-04 14:47 +0100  Marius Kintel  <marius@kintel.net>  (092e57abb1c0)
+
+	* .hgsubstate:
+	Updated subrepos
+
+2011-12-03 16:57 +0100  Marius Kintel  <marius@kintel.net>  (f46f3f53a552)
+
+	* .hgsubstate, src/Inventor/Xt/SoXt.cpp,
+	src/Inventor/Xt/SoXtClipboard.cpp, src/Inventor/Xt/SoXtClipboard.h,
+	src/Inventor/Xt/SoXtComponent.cpp, src/Inventor/Xt/SoXtComponentP.h,
+	src/Inventor/Xt/SoXtDirectionalLightEditor.cpp,
+	src/Inventor/Xt/SoXtDirectionalLightEditor.h,
+	src/Inventor/Xt/SoXtGLWidget.cpp, src/Inventor/Xt/SoXtGLWidgetP.h,
+	src/Inventor/Xt/SoXtIcons.cpp, src/Inventor/Xt/SoXtIcons.h,
+	src/Inventor/Xt/SoXtInternal.cpp, src/Inventor/Xt/SoXtInternal.h,
+	src/Inventor/Xt/SoXtLightSliderSet.cpp,
+	src/Inventor/Xt/SoXtLightSliderSet.h,
+	src/Inventor/Xt/SoXtMaterialList.cpp,
+	src/Inventor/Xt/SoXtMaterialSliderSet.cpp,
+	src/Inventor/Xt/SoXtMaterialSliderSet.h,
+	src/Inventor/Xt/SoXtPrintDialog.cpp,
+	src/Inventor/Xt/SoXtPrintDialog.h, src/Inventor/Xt/SoXtResource.cpp,
+	src/Inventor/Xt/SoXtResource.h, src/Inventor/Xt/SoXtSliderSet.cpp,
+	src/Inventor/Xt/SoXtSliderSet.h,
+	src/Inventor/Xt/SoXtSliderSetBase.cpp,
+	src/Inventor/Xt/SoXtSliderSetBase.h,
+	src/Inventor/Xt/SoXtTransformSliderSet.cpp,
+	src/Inventor/Xt/SoXtTransformSliderSet.h, src/Inventor/Xt/all-soxt-
+	cpp.cpp, src/Inventor/Xt/devices/6DOFEvents.h,
+	src/Inventor/Xt/devices/SoXtDevice.cpp,
+	src/Inventor/Xt/devices/SoXtDeviceP.h,
+	src/Inventor/Xt/devices/SoXtInputFocus.cpp,
+	src/Inventor/Xt/devices/SoXtKeyboard.cpp,
+	src/Inventor/Xt/devices/SoXtLinuxJoystick.cpp,
+	src/Inventor/Xt/devices/SoXtLinuxJoystick.h,
+	src/Inventor/Xt/devices/SoXtMouse.cpp, src/Inventor/Xt/devices/all-
+	devices-cpp.cpp, src/Inventor/Xt/editors/all-editors-cpp.cpp,
+	src/Inventor/Xt/engines/all-engines-cpp.cpp, src/Inventor/Xt/nodes
+	/all-nodes-cpp.cpp, src/Inventor/Xt/viewers/ExaminerViewer.cpp,
+	src/Inventor/Xt/viewers/FullViewer.cpp,
+	src/Inventor/Xt/viewers/PlaneViewer.cpp,
+	src/Inventor/Xt/viewers/SoXtExaminerViewerP.h,
+	src/Inventor/Xt/viewers/SoXtFullViewerP.h,
+	src/Inventor/Xt/viewers/SoXtPlaneViewerP.h,
+	src/Inventor/Xt/viewers/WalkViewer.cpp, src/Inventor/Xt/viewers/all-
+	viewers-cpp.cpp, src/Inventor/Xt/widgets/SoXtSlider.cpp,
+	src/Inventor/Xt/widgets/SoXtSlider.h,
+	src/Inventor/Xt/widgets/SoXtThumbWheel.cpp,
+	src/Inventor/Xt/widgets/SoXtThumbWheel.h,
+	src/Inventor/Xt/widgets/SoXtThumbWheelP.h,
+	src/Inventor/Xt/widgets/XtNativePopupMenu.cpp,
+	src/Inventor/Xt/widgets/XtNativePopupMenu.h, src/Inventor/Xt/widgets
+	/all-widgets-cpp.cpp, test-code/examinerviewer.cpp:
+	Updated license headers to BSD
+
+2011-12-02 13:58 +0100  Marius Kintel  <marius@kintel.net>  (7513f963b785)
+
+	* .hgsub:
+	Made suprepositories relative
+
+2010-03-22 14:42 +0100  Tamer Fahmy  <tamer@sim.no>  (f08684da6c24)
+
+	* .hgsubstate:
+	Automated merge with https://hg.sim.no/SoXt/default
+
+2010-03-22 14:42 +0100  Tamer Fahmy  <tamer@sim.no>  (d0f2dd2d8b16)
+
+	* .hgsubstate:
+	update subrepository.
+
+2010-03-03 18:48 +0100  Tamer Fahmy  <tamer@sim.no>  (a3789300f61c)
+
+	* ChangeLog, NEWS:
+	reinstate template ChangeLog and prep NEWS file.
+
+2010-03-03 00:18 +0100  Tamer Fahmy  <tamer@sim.no>  (22db128de80f)
+
+	* configure, configure.ac:
+	bump version number.
+
+2010-03-02 23:52 +0100  Tamer Fahmy  <tamer@sim.no>  (27d65f42e3bc)
+
+	* .hgtags:
+	Added tag SoXt-1.3.0 for changeset 47ebb4c4dd07
+
+2010-03-02 23:52 +0100  Tamer Fahmy  <tamer@sim.no>  (47ebb4c4dd07 [SoXt-1.3.0])
+
+	* ChangeLog, docs/ChangeLog.v1.3.0:
+	updated ChangeLogs.
+
