@@ -1,5 +1,13 @@
-SoXt 1.3.1a (so far):
-*bugfixes:
+SoXt 1.4.0 (2019-12-23):
+* new:
+  - Kongsberg Oil & Gas Technologies AS ended SoWin as a commercial product
+    and re-licensed it under the BSD 3-clause license as a service to the
+    user community.
+  - The build system has been migrated from GNU Autotools to CMake
+  - Support for BitBucket and AppVeyor as continuous integration service providers
+
+* bugfixes:
+  - Miscellaneous documentation fixes
 
 SoXt 1.3.0 (2010-03-02):
 * new:
